type/abc/css/styles.css
@import '../fonts/abc.css';
@import '../../bass/fonts/basicallyasansserif.css';
@import '../../bam/fonts/basicallyamono.css';

html {
  text-rendering: optimizeLegibility;

  font-feature-settings: "kern" 1;
  font-feature-settings: "ss01" 0;
  font-variant-numeric: normal;

  -webkit-font-feature-settings: "kern";
}

body {
  min-width: 375px;
  background-color: #000;
}

body, h1, h2, h3 {
  font-family: 'BasicallyASansSerif', sans-serif;  
}

.abc, .sample-font {
  font-family: "AllBirdsCombinations", sans-serif !important;
}

.mono-font {
  font-family: "BasicallyAMono", monospace !important;
}

.ss00 {
  font-feature-settings: "ss01" 0;
}

.ss01 {
  font-feature-settings: "ss01" 1;
}

a:link {
  text-decoration: none;
}

.mental {
  font-weight: 700;
}

.design {
  font-weight: 700;
  color: #999;
}

@media
(-webkit-min-device-pixel-ratio: 3),
(min-resolution: 250dpi) { /* retina display */
  .design {
    -webkit-text-stroke: 0.5px #fff;
    -webkit-text-fill-color: #000;
  }  
  #nav-logo .design {
    font-size: 14px;
    letter-spacing: 0.25px;
  }
  #footer-logo .design {
    font-size: 17px;
    letter-spacing: 0.25px;
  }
}

.notes {
  font-weight: 300;
  font-size: 16px;
}

.notes strong {
  font-weight: 500;
}

.notes h3 {
  font-weight: 500;
  font-size: 18px;
  margin-bottom: 0px;
  margin-top: 0px;
}

.notes p {
  margin-top: 0;
}

#notes img {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 16px;
  display: block;
  max-width: 80%;
}

@media (max-width:600px) {
  .notes {
    font-weight: 300;
  }

  .notes h3 {
  font-weight: 600;
  }
}

#description a:link {
  text-decoration: underline;
}

#donate a:hover {
  text-decoration: none;
}

.donate-btn {
  height: 32px;
  border-radius: 5px;
  padding: 7px;
  vertical-align: middle;
}

#paypal-form {
  display: inline-block;
  vertical-align: 0;
}

#paypal {
  padding: 8px;
  padding-top: 6px;
  padding-bottom: 5px;
  background: #FFC43A;
}

#kofi {
  background: #34ABE0;
  padding-left: 10px;
  padding-right: 10px;
}

.padding-top-32 {
  padding-top: 32px !important;
}

.padding-bottom-32 {
  padding-bottom: 32px !important;
}

.mtd {
  padding-top: 5px !important;
  padding-bottom: 5px !important;
  padding-left: 24px;
  height: 32px;
  color: #fff;
  font-weight: 400;
}

.mobile-padding {
  padding-left: 16px !important;
}

.mtd-wide {
  width: 100%;
}

.download-btn {
  height: 34px;
  border-radius: 5px;
  border: 1px solid #4e4e4e !important;
  margin: 5px;
  margin-right: 0px;
  padding: 6px 10px !important;
  padding-bottom: 3px !important;
  font-weight: 600;
  color:#fff;
  font-size: 14px;
  letter-spacing: 0.03em;
}

.download-btn:hover {
  background-color: #3e3e3e;
  color:#fff;
}

.download-btn a:hover {
  text-decoration: none;
}

.download-spacer {
  padding: 2.5px !important;
}

.nav-dark-grey {
  background: #303030;
}

.nav-wrapper {
  height: 45px;
  width: 100%;
}

.nav-bar {
  z-index: 10000000001 !important;
}

.nav-bar:before {
  -webkit-filter: blur(10px);
  -moz-filter: blur(10px);
  -o-filter: blur(10px);
  -ms-filter: blur(10px);
  filter: blur(10px);
}

.nav-shadow {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

.nav-spacer {
  padding: 8px !important;
}

#hamburger {
  font-size: 20px;
  font-weight: 700;
}

.menu-item {
  font-size: 18px;
  text-align: left;
}

.pop-menu {
  margin-top:46px;
}

.nav-item {
  font-weight: 600;
  color:#fff;
  letter-spacing: 0.03em;
  padding-top: 14px !important;
  line-height: 18px;
  height: 45px;
}

.mobile-left {
  width:10% !important;
}

.menu-bg {
  color: #000;
  background: #FAE232;
}

.title-bg {
  color: #000;
  background: #FAE232;
}

.title-item {
  font-weight: 700;
  font-size: 17px;
}

.title-item:hover {
  text-decoration: none;
}

@supports (-webkit-text-stroke: 1px black) {
  .title-text {
      -webkit-text-stroke: 1.5px black;
      -webkit-text-fill-color: white;
      text-shadow: 3px 3px black;
  }

  @media(min-resolution: 196dpi) {
    .title-text {
      -webkit-text-stroke: 1px black;
    }
  }
}

.nav-center {
  padding-top: 12px !important;
  display: block;
  width: 80% !important;
  text-align: center;
  margin:0 auto;
  line-height: 22px;
}

.nav-center .title-item {
  font-weight: 600;
}

.nav-item-hover:hover {
  background-color: #3f3f3f !important;
  color: #fff !important;
  text-decoration: none;
}

.ctl-blue {
  background: #1E6FBF;
  color: #fff !important;
}

.content {
  max-width:100%;
  margin-top:46px
}

.title {
  font-weight: 700;
  font-size: 50pt;
  letter-spacing: 0px;
  line-height: 1.4;
}

.subtitle {
  font-weight: 600;
  font-size: 26px;
  opacity: 0.75;
}

@media(max-width: 600px) {
  .title {
    font-size: 56px;
  }
}

.section {
  padding-left: 16px;
  padding-right: 16px;
}

.dark-section {
  padding-top: 48px !important;
}

.section-wrapper {
  width: 100%;
}

h1 {
  font-size: 48px;
}

[contenteditable]:focus, select:focus {
    outline: 0px solid transparent;
}

.sample {
  display:inline-block;
  width: 100%;
  margin-bottom: 5px;
}

#dark-mode {
  width: 48px;
  height: 48px;
  padding-top: 16px;
  padding-right: 16px;
  text-align: center;
  z-index: 1000;
}

#dark-icon {
  vertical-align: 1px;
}

.sample-line {
  margin-bottom: 5px;
}

.control {
  padding: 5px;
  border-radius: 5px;
  text-align: center;
  overflow:hidden;
}

.control-light {
  background: rgba(247, 247, 247, 0.8);
}

.control-dark {
  background: rgba(0, 0, 0, 0.8);
}

.control-wrapper {
  position: relative;
  z-index: 100 !important;

  max-width: 660px;
  min-height: 40px;
  margin: auto;
}

.control-item {
  display: inline-block;
  padding-right: 5px;
}

.control-last {
  padding-right: 0;
}

.separator {
  border-right: 1px solid #AEC7E8;
}

.control-label {
  display: inline-block;
  text-align: right;
  width: 100px;
  color: #1E6FBF;
  margin-right: 5px;
  vertical-align: middle;
  opacity: 1;
  font-size: 15px;
  font-weight: 500;
}

.control-icon {
  height: 25px;
  padding-bottom: 5px;
  padding-left: 5px;
  margin-right: 5px;
}

.weight-control .control-label {
  width: 70px;
}

.size-control .control-label {
  width: 0px;
}

.spacing-control .control-label {
  width: 0px;
}

.height-control .control-label {
  width: 0px;
}

.align-control {
  margin-left: 5px;
}

.align-control i {
  padding: 5px;
  color: #1E6FBF;
  border-radius: 3px;
  vertical-align: -1px;
}

@media (max-width:648px) {
  .control-wrapper {
    min-height: 71px;
  }

  .align-control {
    margin-left: 3px;
  }
}

.selected {
  color: #1E6FBF;
}

.slider {
  -webkit-appearance: none;
  appearance: none;
  height: 2px; 
  width: 75px;
  background: #AEC7E8;
  opacity: 1;
  outline: none;
  -webkit-transition: .2s;
  transition: opacity .2s;
  vertical-align: middle;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: #1E6FBF;
  cursor: pointer;
  border: 1px solid #1E6FBF;
  box-shadow: none;
}

.slider::-moz-range-thumb {
  appearance: none;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #1E6FBF;
  cursor: pointer;
  border: 1px solid #1E6FBF;
}

.section-light-grey {
  background: #f7f7f7;
}

.item-blue {
  color: #1E6FBF;
}

/* Characters */

.char-category {
  margin-bottom: 8px;
}

.char-title {
  margin-top: 16px;
  margin-bottom: 2px;
  margin-left: 2px;

  font-size: 16px;
  font-weight: 400;
  color: #5e5e5e;
}

.char-cell {
  display: inline-block;
  margin: 2px;
  background: #fefefe;
  
  text-align: center;
}

.char-div {
  display: inline-block;
}

.char-code {
  font-size: 10px;
  color: #999;
  height: 10px;
}

/* Footer */

footer {
  box-shadow: 0px 0px 30px 3px rgba(255, 255, 255, 0.10);
}

.footer-logo {
  font-size: 18px;
}

.social {
  font-weight: 200;
}

.mail {
  vertical-align: 1px;
}

.blog {
  vertical-align: -1px;
}

.copyright {
  font-size: 18px;
  font-weight: 300;
  vertical-align: -1px;
  margin-right: 5px;
}

/* Details */
#details-btn {
  text-align: left;
  color: #1E6FBF !important;
  font-weight: 400;
  font-size: 20px;
}

#details-wrapper {
  margin-top: 12px;
  margin-bottom: 16px;
}

#details {
  border-radius: 12px;
  padding: 16px;
  padding-bottom: 1px;
}

#ten-parts {
  font-weight: 700;
  font-size: 40pt;
  text-align: center;
}

#three-wrapper {
  font-weight: 700;
  font-size: 96pt;
  text-align: center;
  height: 64px;
}

#three-parts {
  position: relative;
  top: -110px;
}

#a-weights {
  font-size: 40pt;
  font-weight: 700;
  text-align: center;
  margin-top: -24px;
}

#wave {
  margin: 0 auto;
}

